Styling fixes for home page on mobile

--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -3,20 +3,30 @@
     min-height: 200px;
 }
 
-.main-card {
-    min-height: 400px;
-    min-width: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.youtube-frame {
+    border: 0;
+    width: 100%;
+    aspect-ratio: 16/9;
 }
 
-.youtube-frame {
-    display: block;
-    border: none;
-    height: 480px;
-    width: 768px;
-    flex-shrink: 0;
+.mat-card-footer {
+    text-align: end;
+    font-size: 12px;
+    color: #bbbbbb;
+    margin: 0;
+    align-self: flex-end;
+    flex: 1 1 auto;
+}
+
+.mat-card {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.center-toolbar {
+    display:flex;
+    justify-content: space-around;
 }
 
 .home-content-grid {
